trying to fix live error on mobile site

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -396,7 +396,7 @@ footer {
 		}
 	}
 	main {
-		padding-top: 2rem;
+		//padding-top: 2rem;
 	}
 
 	main.case-study {
